# mathbib-py

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  example.bib  example.tex  local-example.sty  lookup.py  parse_journals.py  processed_journals.json  pyproject.toml  remote.py  setup.cfg  test.py  zbrecord.py  zotero_cleaned.json
mathbib/: __init__.py  bibtex.py  citegen.py  command.py  partition.py  record.py  request.py  session.py  term.py
mathbib/remote/: __init__.py  arxiv.py  ol.py  utils.py  zbmath.py
mathbib/resources/: journal_abbrevs.json
src/mathbib/: __init__.py  __main__.py  alias.py  bibtex.py  citegen.py  command.py  error.py  index.py  partition.py  record.py  remote.py  request.py  search.py  session.py  term.py
src/mathbib/api/: __init__.py  arxiv.py  zbl.py  zbmath.py
src/mathbib/remote/: __init__.py  arxiv.py  doi.py  error.py  isbn.py  journal_abbreviations.py  ol.py  parse.py  utils.py  zbl.py  zbmath.py
src/mathbib/remote/utils/: __init__.py  journal_abbreviations.py
src/mathbib/resources/: journal_abbrevs.json
test/: alias.toml  example.html  example.tex  relations.toml  replace.tex  sanity_check.fish  search.bib  test.bib  test.py  test_partition.py  transform.json  zotero.json  zotero_cleaned.json
test/update/: out.tex  replace.tex
