[build-system]
requires = [
    "setuptools>=67.7",
    "wheel>=0.40"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__"
]
ignore = []

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"

[tool.black]
target-version = ["py311"]
