[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenv]
in-project = true

[tool.poetry]
name = "mathbib"
version = "0.7.12"
description = "A mathematics BibLaTeX bibliography manager."
authors = ["Alex Rutar <alex@rutar.org>"]
readme = "README.md"
packages = [{include = "mathbib"}]
license = "MIT"
repository = "https://github.com/alexrutar/mathbib-py"
include = ["mathbib/resources/journal_abbrevs.json"]

[tool.poetry.scripts]
mbib = "mathbib.command:cli"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
bibtexparser = "^1.4.1"
click = "^8.1.7"
nameparser = "^1.1.3"
lxml = "^5.2.2"
python = "^3.12.0"
python-stdnum = "^1.20"
requests = "^2.32.3"
tomli-w = "^1.0.0"
urllib3 = "^2.2.2"
xdg-base-dirs = "^6.0.1"

[tool.pyright]
include = ["mathbib"]
exclude = [
    "**/__pycache__"
]
ignore = []

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"

[tool.black]
target-version = ["py311"]
