[metadata]
name = mathbib
version = attr: mathbib.__version__
author = Alex Rutar
author_email = alex@rutar.org
description = A mathematics BibLaTeX bibliography manager.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexrutar/mathbib
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11.0
install_requires =
    bibtexparser >= 1.4.0 
    nameparser >= 1.1.2 
    xdg-base-dirs >= 6.0.0
    lxml >= 4.9.2
include_package_data = True

[options.entry_points]
console_scripts =
    mbib = mathbib.command:cli

[options.packages.find]
where = src

[flake8]
max-line-length = 89
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
per-file-ignore =
    __init__.py: F401,

[mypy]
python_version = 3.11
exclude = build
